# twitchchathistory-rs

./: Cargo.toml  Rocket.toml  config.toml  diesel.toml  redo_all_migrations  revert_all_migrations
api/: Cargo.toml
api/src/: main.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  schema.rs
common/src/models/: channel.rs  message.rs  mod.rs  resub.rs  user.rs  user_old_name.rs
common/src/services/: channels.rs  messages.rs  mod.rs  resubs.rs  users.rs  users_old_names.rs
migrations/2022-05-21-001014_initial/: down.sql  up.sql
twitch_collector/: Cargo.toml
twitch_collector/src/: main.rs  twitch_watcher.rs
