[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
rocket = { version = "0.4.10" }
diesel = { version = "1.4.8", features = ["postgres", "uuid"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
dotenv = "0.15.0"
tokio = { version = "1.19.2", features = ["full"] }
serde_derive = "1.0.137"
log = "0.4.17"
env_logger = "0.9.0"

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["diesel_postgres_pool", "json"]
