[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono"] }
uuid = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
anyhow = "1.0.57"
dotenvy = "0.15.6"
tokio = { version = "1.19.2", features = ["full"] }
config = "0.13.2"
lazy_static = "1.4.0"
serde_derive = "1.0.137"
log = "0.4.17"
env_logger = "0.9.0"
chrono = "0.4.22"
derivative = "2.2.0"
error-stack = "0.2.3"
strum_macros = "0.24.3"
byteorder = "1.4.3"